--- a/index.html
+++ b/index.html
@@ -1,16 +1,333 @@
 <!DOCTYPE html>
-<html>
- 
+<html lang="en">
 <head>
-    <!-- Information about the page -->
-    <!--This is the comment tag-->
-     
-    <title>GeeksforGeeks</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Latest news: new smartphones launch, new gadgets launch, new laptops launch</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet" />
+  <link rel="stylesheet" href="font.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
- 
+
 <body>
-    Hello world
-    <!--Contents of the webpage-->
+  <nav class="navbar navbar-expand-lg bg-warning">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="home.html"><b>TechGehlot</b></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Topics</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Tech News</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">Smartphones </a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">Technolgy</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">Laptops</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">Gadgets</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="Submit_detalis_1 with CSS/Submit_Details_1.html">Redeem Coupon <span class="badge bg-danger">New</span></a>
+              </li>
+              <!-- <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something went wrong</a>
+                </li> -->
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Contact us</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn btn-outline-success" type="submit">
+            Search
+          </button>
+        </form>
+        <div class="mx-2" style="padding: 6px;">
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+            data-bs-target="#loginModal">Login</button>
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+            data-bs-target="#signupModal">SignUp</button>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <!-- log in Modal -->
+  <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="loginModalLabel">Login to TechGehlot</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" aria-describedby="passwordAlert">
+              <div id="passwordAlert" class="form-text">Password should have 8 to 15 characters long</div>
+            </div>
+            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- sign up Modal -->
+  <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="signupModalLabel">SignUp with TechGehlot</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-4">
+              <label for="exampleInputname1" class="form-label">Your Full Name</label>
+              <input type="name" class="form-control" id="exampleInputname1" aria-describedby="nameHelp">
+            </div>
+            <div class="mb-4">
+              <label for="exampleInputEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="mb-4">
+              <label for="exampleInputPassword1" class="form-label">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" aria-describedby="passwordAlert">
+              <div id="passwordAlert" class="form-text">Password should have 8 to 15 characters long</div>
+            </div>
+            <div class="mb-4">
+              <label for="exampleInputPassword1" class="form-label">Conform Your Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" aria-describedby="passwordAlert">
+            </div>
+
+            <button type="submit" class="btn btn-primary">Create an account</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container" style="padding: 4px;">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+          aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+          aria-label="Slide 5"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./Pics/home_page_pics/tech1.jpg" width="100%" height="100%" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Welcome to TechGehlot</h3>
+            <p>Explore Latest Video To Right Swipe</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./Pics/home_page_pics/86th.jpg" width="100%" height="100%" class="d-block w-100" alt="..." />
+          <!-- <div class="carousel-caption d-none d-md-block">
+            <h3>Explore New Launched Laptops</h3>
+            <p>Laptops For Beginners, Professionals And Programmers</p>
+          </div> -->
+        </div>
+        <div class="carousel-item">
+          <img src="./Pics/home_page_pics/84th.jpg" width="100%" height="100%" class="d-block w-100" alt="..." />
+          <!-- <div class="carousel-caption d-none d-md-block">
+            <h3>Explore New Launched Laptops</h3>
+            <p>Laptops For Beginners, Professionals And Programmers</p>
+          </div> -->
+        </div>
+        <div class="carousel-item">
+          <img src="./Pics/home_page_pics/tech4.jpg" width="100%" height="100%" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="./Pics/home_page_pics/tech5.jpg" width="100%" height="100%" class="d-block w-100" alt="..." />
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container my-4">
+    <h1 style="font-family: font-family 'Lato', sans-serif;
+      font-family: 'Mukta', sans-serif;
+      font-family: 'Oswald', sans-serif;
+      font-family: 'Roboto Slab', serif;
+      font-family: 'Solway', serif;;">Latest Tech News</h1>
+    <div class="row mb-2">
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary">World</strong>
+            <h3 class="mb-0">IPhone 14 launch </h3>
+            <div class="mb-1 text-muted">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+              additional content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="./Pics/home_page_pics/news1.jpg" width="200px" height="250px" alt="">
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-success">Design</strong>
+            <h3 class="mb-0">ASUS ROG Strix G17</h3>
+            <div class="mb-1 text-muted">Nov 11</div>
+            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
+              content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="./Pics/home_page_pics/news2.jpg" width="200px" height="250px" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row mb-2">
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary">World</strong>
+            <h3 class="mb-0">APPLE iPad Pro 2022</h3>
+            <div class="mb-1 text-muted">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+              additional content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="./Pics/home_page_pics/news3.jpg" width="200px" height="250px" alt="">
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-success">Design</strong>
+            <h3 class="mb-0">GoPro Hero9 Camera</h3>
+            <div class="mb-1 text-muted">Nov 11</div>
+            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
+              content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="./Pics/home_page_pics/news4.jpg" width="200px" height="250px" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row mb-2">
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-primary">World</strong>
+            <h3 class="mb-0">APPLE New Headset</h3>
+            <div class="mb-1 text-muted">Nov 12</div>
+            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+              additional content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="./Pics/home_page_pics/news5.jpg" width="200px" height="250px" alt="">
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-4 d-flex flex-column position-static">
+            <strong class="d-inline-block mb-2 text-success">Design</strong>
+            <h3 class="mb-0">Hand Gesture</h3>
+            <div class="mb-1 text-muted">Nov 11</div>
+            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional
+              content.</p>
+            <a href="#" class="stretched-link">Continue reading</a>
+          </div>
+          <div class="col-auto d-none d-lg-block">
+            <img src="./Pics/home_page_pics/news6.jpg" width="200px" height="250px"  alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+   </div>
+
+   <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+          <img src="/HTML/TG Logo_PNG.png" width="30px" height="24px" alt="">
+        </a>
+        <span class="mb-3 mb-md-0 text-muted">© 2020-2022 TechGehlot, Inc</span>
+      </div>
+  
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+
+        <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/jaigehlotofficial/" target="_blank"><img src="insta.png" width="24px" height="24px" alt=""></a></li>
+
+        <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/techgehlot" target="_blank"><img src="fb.png" width="24px" height="24px" alt=""></a></li>
+
+        <li class="ms-3"><a class="text-muted" href="https://twitter.com/TechGehlot"><img src="twitter.png" width="24px" height="24px" alt=""></a></li>
+      </ul>
+    </footer>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+    crossorigin="anonymous"></script>
 </body>
- 
+
 </html>
